@@ -31,6 +31,7 @@ Application Fixes:
 - Fixed behaviour of Armor Mods improperly not showing their modification of parent items.
 - Added logic to prevent accepting a custom drug that does not have a Foundation or a Name without adding the drug successfully.
 - Fixed behaviour of deletion of custom drug recipes in create mode.
+- Unified behaviour of Essence improvements between cyberware and bioware.
 
 Application Changes:
 
